initial example setup

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=callybob
+author=callum bg
 support=
-description=An example greeter plugin
+description=A helmet checker plugin
 tags=
 plugins=com.example.ExamplePlugin
